[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Resources/Player/Sprites/sprite_CharacterFront0.png" type="Texture" id=2]
[ext_resource path="res://Resources/Player/PlayerMenu.gd" type="Script" id=3]



[sub_resource type="ShaderMaterial" id=4]

render_priority = 0

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 22.6998
height = 20.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10.3441, 29.8042 )

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Material" ]
moveSpeed = 250
velocitySpeed = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

material = SubResource( 4 )
frames = SubResource( 1 )
animation = "idle"
_sections_unfolded = [ "Material", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="2"]

position = Vector2( 0, -0.0460691 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

visible = false
position = Vector2( -0.17322, 0 )
scale = Vector2( 1.91411, 1 )
shape = SubResource( 3 )

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]

[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_Area2D_mouse_exited"]


